TQ3lib-clean/isoC-Sigli/tqintf.h

#define R 8.31451
	void c_tqini(int, void *);                                                  // initiates the OC package
    
	void c_tqrfil(char *, void *);                                              // read all elements from a TDB file
    //void c_tqgcom(int *, char[MAXEL][24], void **);                           // get system component names. At present the elements
    void c_tqrpfil(char *, int, char **, void *);                               // read TDB file with selection of elements
    //void c_tqgnp(int *, void **);                                             // get total number of phases and composition sets
    void c_tqgpi(int *, char *, void *);                                        // get index of phase phasename
	void c_tqgpn(int, char *, void *);                                          // get name of phase+compset tuple with index phcsx
     //void c_tqgnp(int, gtp_equilibrium_data **);                               // get total number of phases and composition sets
    void examine_gtp_equilibrium_data(void *);                                  //
extern"C" int  c_ntup;                                                          //
extern"C" int  c_nel;                                                           // number of elements
extern"C" int  c_maxc;                                                          //
extern"C" char *c_cnam[MAXEL];                                                     // character array with all element names
extern"C" int c_noofcs(int);
extern"C" double c_mass[24];