TQ4lib/Cpp/Matthias/liboctqcpp.h

extern"C" int  c_maxp;
extern"C" char * cnames[25];
    void c_tqgcom(int *, char *, void *);
    void c_tqgnp(int *, void *);
    void c_tqgpcn(int, int, char *, void *);
    void c_tqgpci(int, int *, char *, void *);